# demo-server

./: .gitignore  README.md  flake.nix
cpp/: default.nix
haskell/: cabal.project  default.nix
haskell/with-euler/src/: Main.hs
haskell/without-euler/: without-euler.cabal
haskell/without-euler/src/: Main.hs
nix/: ghc8107.nix  ghc884.nix  ghc924.nix
with-cpp/: server.cpp
with-euler/: with-euler.cabal
with-euler/src/: Server.hs
without-euler/: without-euler.cabal
