cabal-version: 3.0

name:           without-euler
version:        0.1
description:    Demo application using euler-hs
homepage:       https://github.com/sbh69840/demo-server#readme
bug-reports:    https://github.com/sbh69840/demo-server/issues

source-repository head
  type: git
  location: https://github.com/sbh69840/demo-server

executable without-euler
  main-is: Main.hs
  hs-source-dirs:
      src/
  ghc-options: -Wall -rtsopts -O2
  build-depends:
      base >=4.7 && <5
    , hedis
  default-language: Haskell2010
