cabal-version: 3.0

name:           without-euler
version:        0.1
description:    microbenchmark of functions within IO monad

executable without-euler
  main-is: Main.hs
  hs-source-dirs:
      src/
  ghc-options: -Wall -rtsopts -O2
  build-depends:
      base >=4.7 && <5
    , hedis
  default-language: Haskell2010
